// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Open API helpers depictAny() should set format:any 1`] = `
{
  "format": "any",
}
`;

exports[`Open API helpers depictArray() should set type:array and pass items depiction 1`] = `
{
  "items": {
    "type": "boolean",
  },
  "type": "array",
}
`;

exports[`Open API helpers depictBigInt() should set type:integer and format:bigint 1`] = `
{
  "format": "bigint",
  "type": "integer",
}
`;

exports[`Open API helpers depictBoolean() should set type:boolean 1`] = `
{
  "type": "boolean",
}
`;

exports[`Open API helpers depictBranded should pass the next depicter 1`] = `
{
  "minLength": 2,
  "type": "string",
}
`;

exports[`Open API helpers depictCatch() should pass next depicter 1`] = `
{
  "type": "boolean",
}
`;

exports[`Open API helpers depictDate should throw clear error 0 1`] = `[OpenAPIError: Using z.date() within output schema is forbidden. Please use z.dateOut() instead. Check out the documentation for details.]`;

exports[`Open API helpers depictDate should throw clear error 1 1`] = `[OpenAPIError: Using z.date() within input schema is forbidden. Please use z.dateIn() instead. Check out the documentation for details.]`;

exports[`Open API helpers depictDateIn should set type:string, pattern and format 1`] = `
{
  "description": "YYYY-MM-DDTHH:mm:ss.sssZ",
  "externalDocs": {
    "url": "https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toISOString",
  },
  "format": "date-time",
  "pattern": "^\\d{4}-\\d{2}-\\d{2}(T\\d{2}:\\d{2}:\\d{2}(\\.\\d+)?)?Z?$",
  "type": "string",
}
`;

exports[`Open API helpers depictDateIn should throw when ZodDateIn in response 1`] = `[OpenAPIError: Please use z.dateOut() for output.]`;

exports[`Open API helpers depictDateOut should set type:string, description and format 1`] = `
{
  "description": "YYYY-MM-DDTHH:mm:ss.sssZ",
  "externalDocs": {
    "url": "https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toISOString",
  },
  "format": "date-time",
  "type": "string",
}
`;

exports[`Open API helpers depictDateOut should throw when ZodDateOut in request 1`] = `[OpenAPIError: Please use z.dateIn() for input.]`;

exports[`Open API helpers depictDefault() should set default property 1`] = `
{
  "default": true,
  "type": "boolean",
}
`;

exports[`Open API helpers depictDiscriminatedUnion() should wrap next depicters in oneOf prop and set discriminator prop 1`] = `
{
  "discriminator": {
    "propertyName": "status",
  },
  "oneOf": [
    {
      "properties": {
        "data": {
          "format": "any",
          "nullable": true,
        },
        "status": {
          "enum": [
            "success",
          ],
          "type": "string",
        },
      },
      "required": [
        "status",
      ],
      "type": "object",
    },
    {
      "properties": {
        "error": {
          "properties": {
            "message": {
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "status": {
          "enum": [
            "error",
          ],
          "type": "string",
        },
      },
      "required": [
        "status",
        "error",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`Open API helpers depictEffect() should depict as number (out) 1`] = `
{
  "type": "number",
}
`;

exports[`Open API helpers depictEffect() should depict as object (refinement) 1`] = `
{
  "properties": {
    "s": {
      "type": "string",
    },
  },
  "required": [
    "s",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictEffect() should depict as string (in) 1`] = `
{
  "type": "string",
}
`;

exports[`Open API helpers depictEffect() should depict as string (preprocess) 1`] = `
{
  "format": "string (preprocessed)",
}
`;

exports[`Open API helpers depictEnum() should set type and enum properties 1`] = `
{
  "enum": [
    "one",
    "two",
  ],
  "type": "string",
}
`;

exports[`Open API helpers depictEnum() should set type and enum properties 2`] = `
{
  "enum": [
    "ONE",
    "TWO",
  ],
  "type": "string",
}
`;

exports[`Open API helpers depictFile() should set type:string and format accordingly 0 1`] = `
{
  "format": "file",
  "type": "string",
}
`;

exports[`Open API helpers depictFile() should set type:string and format accordingly 1 1`] = `
{
  "format": "binary",
  "type": "string",
}
`;

exports[`Open API helpers depictFile() should set type:string and format accordingly 2 1`] = `
{
  "format": "byte",
  "type": "string",
}
`;

exports[`Open API helpers depictFile() should throw when using in input 1`] = `[OpenAPIError: Please use z.file() only within ResultHandler.]`;

exports[`Open API helpers depictIOExamples() should pass examples in case of request 1`] = `
{
  "examples": {
    "example1": {
      "value": {
        "one": "test",
        "two": 123,
      },
    },
    "example2": {
      "value": {
        "one": "test2",
        "two": 456,
      },
    },
  },
}
`;

exports[`Open API helpers depictIOExamples() should transform examples in case of response 1`] = `
{
  "examples": {
    "example1": {
      "value": {
        "one": 4,
        "two": "123",
      },
    },
    "example2": {
      "value": {
        "one": 5,
        "two": "456",
      },
    },
  },
}
`;

exports[`Open API helpers depictIOParamExamples() should pass examples in case of request 1`] = `
{
  "examples": {
    "example1": {
      "value": 123,
    },
    "example2": {
      "value": 456,
    },
  },
}
`;

exports[`Open API helpers depictIOParamExamples() should transform examples in case of response 1`] = `
{
  "examples": {
    "example1": {
      "value": "123",
    },
    "example2": {
      "value": "456",
    },
  },
}
`;

exports[`Open API helpers depictIntersection() should wrap next depicters in allOf property 1`] = `
{
  "allOf": [
    {
      "properties": {
        "one": {
          "exclusiveMaximum": false,
          "exclusiveMinimum": false,
          "format": "double",
          "maximum": 1.7976931348623157e+308,
          "minimum": 5e-324,
          "type": "number",
        },
      },
      "required": [
        "one",
      ],
      "type": "object",
    },
    {
      "properties": {
        "two": {
          "exclusiveMaximum": false,
          "exclusiveMinimum": false,
          "format": "double",
          "maximum": 1.7976931348623157e+308,
          "minimum": 5e-324,
          "type": "number",
        },
      },
      "required": [
        "two",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`Open API helpers depictLiteral() should set type and involve enum property 1`] = `
{
  "enum": [
    "testing",
  ],
  "type": "string",
}
`;

exports[`Open API helpers depictNull() should set type:string format:null and nullable:true props 1`] = `
{
  "format": "null",
  "nullable": true,
  "type": "string",
}
`;

exports[`Open API helpers depictNullable() should set nullable:true 0 1`] = `
{
  "nullable": true,
  "type": "string",
}
`;

exports[`Open API helpers depictNullable() should set nullable:true 1 1`] = `
{
  "nullable": true,
  "type": "string",
}
`;

exports[`Open API helpers depictNumber() should type:number, min/max, format and exclusiveness props 1`] = `
{
  "exclusiveMaximum": false,
  "exclusiveMinimum": false,
  "format": "double",
  "maximum": 1.7976931348623157e+308,
  "minimum": 5e-324,
  "type": "number",
}
`;

exports[`Open API helpers depictNumber() should type:number, min/max, format and exclusiveness props 2`] = `
{
  "exclusiveMaximum": false,
  "exclusiveMinimum": false,
  "format": "int64",
  "maximum": 20,
  "minimum": 10,
  "type": "integer",
}
`;

exports[`Open API helpers depictObject() should type:object, properties and required props 0 1`] = `
{
  "properties": {
    "a": {
      "exclusiveMaximum": false,
      "exclusiveMinimum": false,
      "format": "double",
      "maximum": 1.7976931348623157e+308,
      "minimum": 5e-324,
      "type": "number",
    },
    "b": {
      "type": "string",
    },
  },
  "required": [
    "a",
    "b",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictObject() should type:object, properties and required props 1 1`] = `
{
  "properties": {
    "a": {
      "exclusiveMaximum": false,
      "exclusiveMinimum": false,
      "format": "double",
      "maximum": 1.7976931348623157e+308,
      "minimum": 5e-324,
      "type": "number",
    },
    "b": {
      "type": "string",
    },
  },
  "required": [
    "a",
    "b",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictObject() should type:object, properties and required props 2 1`] = `
{
  "properties": {
    "a": {
      "exclusiveMaximum": false,
      "exclusiveMinimum": false,
      "format": "double",
      "maximum": 1.7976931348623157e+308,
      "minimum": 5e-324,
      "type": "number",
    },
    "b": {
      "type": "string",
    },
  },
  "required": [],
  "type": "object",
}
`;

exports[`Open API helpers depictObjectProperties() should wrap next depicters in a shape of object 1`] = `
{
  "one": {
    "type": "string",
  },
  "two": {
    "type": "boolean",
  },
}
`;

exports[`Open API helpers depictOptional() should pass the next depicter 0 1`] = `
{
  "type": "string",
}
`;

exports[`Open API helpers depictOptional() should pass the next depicter 1 1`] = `
{
  "type": "string",
}
`;

exports[`Open API helpers depictPipeline should depict as boolean (out) 1`] = `
{
  "type": "boolean",
}
`;

exports[`Open API helpers depictPipeline should depict as string (in) 1`] = `
{
  "type": "string",
}
`;

exports[`Open API helpers depictRecord() should set properties+required or additionalProperties props 1`] = `
{
  "additionalProperties": {
    "type": "boolean",
  },
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should set properties+required or additionalProperties props 2`] = `
{
  "additionalProperties": {
    "type": "boolean",
  },
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should set properties+required or additionalProperties props 3`] = `
{
  "properties": {
    "one": {
      "type": "boolean",
    },
    "two": {
      "type": "boolean",
    },
  },
  "required": [
    "one",
    "two",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should set properties+required or additionalProperties props 4`] = `
{
  "properties": {
    "testing": {
      "type": "boolean",
    },
  },
  "required": [
    "testing",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictRecord() should set properties+required or additionalProperties props 5`] = `
{
  "properties": {
    "one": {
      "type": "boolean",
    },
    "two": {
      "type": "boolean",
    },
  },
  "required": [
    "one",
    "two",
  ],
  "type": "object",
}
`;

exports[`Open API helpers depictRequestParams() should depict none if both query and params are disabled 1`] = `[]`;

exports[`Open API helpers depictRequestParams() should depict only path params if query is disabled 1`] = `
[
  {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": {
      "description": "GET /v1/user/:id parameter",
      "type": "string",
    },
  },
]
`;

exports[`Open API helpers depictRequestParams() should depict query and path params 1`] = `
[
  {
    "in": "path",
    "name": "id",
    "required": true,
    "schema": {
      "description": "GET /v1/user/:id parameter",
      "type": "string",
    },
  },
  {
    "in": "query",
    "name": "test",
    "required": true,
    "schema": {
      "description": "GET /v1/user/:id parameter",
      "type": "boolean",
    },
  },
]
`;

exports[`Open API helpers depictSecurity() should depict OAuth2 Security with flows 1`] = `
{
  "flows": {
    "authorizationCode": {
      "authorizationUrl": "https://test.url",
      "refreshUrl": "https://test2.url",
      "scopes": {
        "read": "read something",
        "write": "write something",
      },
      "tokenUrl": "https://test3.url",
    },
    "clientCredentials": {
      "refreshUrl": "https://test2.url",
      "scopes": {
        "read": "read something",
        "write": "write something",
      },
      "tokenUrl": "https://test3.url",
    },
    "implicit": {
      "authorizationUrl": "https://test.url",
      "refreshUrl": "https://test2.url",
      "scopes": {
        "read": "read something",
        "write": "write something",
      },
    },
    "password": {
      "refreshUrl": "https://test2.url",
      "scopes": {
        "read": "read something",
        "write": "write something",
      },
      "tokenUrl": "https://test3.url",
    },
  },
  "type": "oauth2",
}
`;

exports[`Open API helpers depictSecurity() should handle Basic, Bearer and CustomHeader Securities 1`] = `
{
  "or": [
    {
      "and": [
        {
          "scheme": "basic",
          "type": "http",
        },
        {
          "scheme": "bearer",
          "type": "http",
        },
      ],
    },
    {
      "in": "header",
      "name": "X-Key",
      "type": "apiKey",
    },
  ],
}
`;

exports[`Open API helpers depictSecurity() should handle Input and Cookie Securities 1`] = `
{
  "and": [
    {
      "or": [
        {
          "in": "query",
          "name": "apiKey",
          "type": "apiKey",
        },
        {
          "in": "cookie",
          "name": "hash",
          "type": "apiKey",
        },
      ],
    },
  ],
}
`;

exports[`Open API helpers depictSecurity() should handle OpenID and OAuth2 Securities 1`] = `
{
  "or": [
    {
      "openIdConnectUrl": "https://test.url",
      "type": "openIdConnect",
    },
    {
      "flows": {},
      "type": "oauth2",
    },
  ],
}
`;

exports[`Open API helpers depictSecurity() should handle undefined flows 1`] = `
{
  "flows": {},
  "type": "oauth2",
}
`;

exports[`Open API helpers depictSecurityRefs() should handle LogicalAnd 1`] = `
[
  {
    "A": [],
    "B": [],
    "C": [],
  },
]
`;

exports[`Open API helpers depictSecurityRefs() should handle LogicalAnd 2`] = `
[
  {
    "A": [],
    "B": [],
  },
  {
    "A": [],
    "C": [],
  },
]
`;

exports[`Open API helpers depictSecurityRefs() should handle LogicalOr 1`] = `
[
  {
    "A": [],
  },
  {
    "B": [],
  },
  {
    "C": [],
  },
]
`;

exports[`Open API helpers depictSecurityRefs() should handle LogicalOr 2`] = `
[
  {
    "A": [],
  },
  {
    "B": [],
    "C": [],
  },
]
`;

exports[`Open API helpers depictSecurityRefs() should handle the plain value 1`] = `
[
  {
    "A": [],
  },
]
`;

exports[`Open API helpers depictSecurityRefs() should populate the scopes 1`] = `
[
  {
    "A": [
      "write",
    ],
  },
  {
    "B": [
      "read",
    ],
  },
  {
    "C": [
      "read",
      "write",
    ],
  },
]
`;

exports[`Open API helpers depictString() should set format, pattern and min/maxLength props 0 1`] = `
{
  "format": "email",
  "maxLength": 20,
  "minLength": 10,
  "type": "string",
}
`;

exports[`Open API helpers depictString() should set format, pattern and min/maxLength props 1 1`] = `
{
  "format": "url",
  "type": "string",
}
`;

exports[`Open API helpers depictString() should set format, pattern and min/maxLength props 2 1`] = `
{
  "format": "uuid",
  "type": "string",
}
`;

exports[`Open API helpers depictString() should set format, pattern and min/maxLength props 3 1`] = `
{
  "format": "cuid",
  "type": "string",
}
`;

exports[`Open API helpers depictString() should set format, pattern and min/maxLength props 4 1`] = `
{
  "format": "date-time",
  "pattern": "/^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(\\.\\d+)?Z$/",
  "type": "string",
}
`;

exports[`Open API helpers depictString() should set format, pattern and min/maxLength props 5 1`] = `
{
  "format": "date-time",
  "pattern": "/^\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(\\.\\d+)?(([+-]\\d{2}:\\d{2})|Z)$/",
  "type": "string",
}
`;

exports[`Open API helpers depictString() should set format, pattern and min/maxLength props 6 1`] = `
{
  "pattern": "/^\\d+.\\d+.\\d+$/",
  "type": "string",
}
`;

exports[`Open API helpers depictString() should set type:string 1`] = `
{
  "type": "string",
}
`;

exports[`Open API helpers depictTags() should accept objects with URLs 1`] = `
[
  {
    "description": "Everything about users",
    "name": "users",
  },
  {
    "description": "Everything about files processing",
    "externalDocs": {
      "url": "https://example.com",
    },
    "name": "files",
  },
]
`;

exports[`Open API helpers depictTags() should accept plain descriptions 1`] = `
[
  {
    "description": "Everything about users",
    "name": "users",
  },
  {
    "description": "Everything about files processing",
    "name": "files",
  },
]
`;

exports[`Open API helpers depictTuple() should set type:array, max- and minLength, oneOf, format:tuple and description 1`] = `
{
  "items": {
    "description": "0: boolean, 1: string, 2: string",
    "format": "tuple",
    "oneOf": [
      {
        "type": "boolean",
      },
      {
        "type": "string",
      },
      {
        "enum": [
          "test",
        ],
        "type": "string",
      },
    ],
  },
  "maxItems": 3,
  "minItems": 3,
  "type": "array",
}
`;

exports[`Open API helpers depictUnion() should wrap next depicters into oneOf property 1`] = `
{
  "oneOf": [
    {
      "type": "string",
    },
    {
      "exclusiveMaximum": false,
      "exclusiveMinimum": false,
      "format": "double",
      "maximum": 1.7976931348623157e+308,
      "minimum": 5e-324,
      "type": "number",
    },
  ],
}
`;

exports[`Open API helpers depictUpload() should set format:binary and type:string 1`] = `
{
  "format": "binary",
  "type": "string",
}
`;

exports[`Open API helpers depictUpload() should throw when using in response 1`] = `[OpenAPIError: Please use z.upload() only for input.]`;

exports[`Open API helpers excludeExampleFromDepiction() should remove example property of supplied object 1`] = `
{
  "description": "test",
  "type": "string",
}
`;

exports[`Open API helpers excludeParamsFromDepiction() should omit specified path params 0 1`] = `
{
  "properties": {
    "b": {
      "type": "string",
    },
  },
  "required": [
    "b",
  ],
  "type": "object",
}
`;

exports[`Open API helpers excludeParamsFromDepiction() should omit specified path params 1 1`] = `
{
  "oneOf": [
    {
      "properties": {},
      "required": [],
      "type": "object",
    },
    {
      "properties": {
        "b": {
          "type": "string",
        },
      },
      "required": [
        "b",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`Open API helpers excludeParamsFromDepiction() should omit specified path params 2 1`] = `
{
  "allOf": [
    {
      "properties": {},
      "required": [],
      "type": "object",
    },
    {
      "properties": {
        "b": {
          "type": "string",
        },
      },
      "required": [
        "b",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`Open API helpers extractObjectSchema() Feature #600: Top level refinements should handle refined object schema 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodString",
    },
  },
}
`;

exports[`Open API helpers extractObjectSchema() should pass the object schema through 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodString",
    },
  },
}
`;

exports[`Open API helpers extractObjectSchema() should return object schema for the intersection of object schemas 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodString",
    },
    "two": {
      "_type": "ZodNumber",
    },
  },
}
`;

exports[`Open API helpers extractObjectSchema() should return object schema for the union of object schemas 1`] = `
{
  "_type": "ZodObject",
  "shape": {
    "one": {
      "_type": "ZodOptional",
      "value": {
        "_type": "ZodString",
      },
    },
    "two": {
      "_type": "ZodOptional",
      "value": {
        "_type": "ZodNumber",
      },
    },
  },
}
`;
